--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -16,32 +16,39 @@ textarea {
 
 h1,
 .h1 {
-
+	font-weight: 200;
+	font-size: 2.25rem;
 }
 
 h2,
 .h2 {
-
+	font-size: 1.75rem;
+	font-weight: 800;
 }
 
 h3,
 .h3 {
-
+	font-size: 1.5rem;
+	font-weight: 200;
 }
 
 h4,
 .h4 {
-
+	font-size: 1.25rem;
+	font-weight: 200;
+	text-transform: uppercase;
 }
 
 h5,
 .h5 {
+	font-size: 1rem;
 	margin: $gutter 0;
 }
 
 h6,
 .h6 {
-
+	font-size: 0.75rem;
+	font-style: italic;
 }
 
 // Copy
