Removed q tag from blockquote styles

--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -70,8 +70,7 @@ i {
 	color: $color-black;
 }
 
-blockquote,
-q {
+blockquote {
 	margin: 0 rem(-24);
 	padding-left: rem(24);
 	border-left: 5px solid $color-black;
