--- a/assets/sass/base/_media.scss
+++ b/assets/sass/base/_media.scss
@@ -25,8 +25,10 @@ img {
 
 // Captions
 .wp-caption {
-	margin: 0 0 rem(24) 0;
+	margin: 0 0 rem(16) 0;
 	max-width: 100%;
+	border: 1px solid black;
+	padding: rem(5);
 
 	img[class*="wp-image-"] {
 		display: block;
