Updated themes text-tomain and tags in the description

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -7,8 +7,8 @@ Description: A simple photo blog for showcasing your images
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: ajs_spb
-Tags: custom
+Text Domain: simple-photo-blog
+Tags: one-column, custom-background, custom-menu, featured-image-header, featured-images, theme-options, blog, photography
 
 This theme, like WordPress, is licensed under the GPL.
 
