--- a/assets/sass/modules/_navigation.scss
+++ b/assets/sass/modules/_navigation.scss
@@ -291,3 +291,15 @@ a {
 		}
 	}
 }
+
+.page-numbers {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	text-align: center;
+
+	li {
+		display: inline-block;
+		padding: 0 rem(5);
+	}
+}
