--- a/style.css
+++ b/style.css
@@ -1112,6 +1112,20 @@ a:hover, a:focus, a:active {
   margin-left: auto;
 }
 
+/* line 295, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_navigation.scss */
+.page-numbers {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+
+/* line 301, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_navigation.scss */
+.page-numbers li {
+  display: inline-block;
+  padding: 0 0.3125rem;
+}
+
 /* line 5, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_header.scss */
 .site-title {
   font-size: 1.5rem;
